Utilization : Separated Admin Pharmacist DB, Separate Implementation of SHA-256, JWT utilities managed